[gd_scene load_steps=3 format=3 uid="uid://2lccdr3xjb5f"]

[ext_resource type="FontFile" uid="uid://cqe0f5cadeqbk" path="res://assets/fonts/NormalFont.ttf" id="1_lbyvt"]
[ext_resource type="Script" path="res://scripts/tower_details.gd" id="1_sfmyu"]

[node name="TowerDetails" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfmyu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lbyvt")
theme_override_font_sizes/font_size = 8
text = "UPGRADE"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lbyvt")
theme_override_font_sizes/font_size = 8
text = "CANCEL"

[connection signal="pressed" from="VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
